# prospector-zmk-module

./: CMakeLists.txt  Kconfig
boards/shields/prospector_scanner/: Kconfig.defconfig  prospector_scanner.conf  prospector_scanner.overlay
boards/shields/prospector_scanner/src/: custom_status_screen.c  scanner_stub.c  scanner_stub.h  touch_handler.c
include/zmk/: hid_central.h  status_gatt_service.h  status_scanner.h  usb_hid_forwarder.h
src/: hid_central.c  status_gatt_service.c  status_scanner.c  usb_hid_forwarder.c
